--- a/ZONE-watcher/app/views/home/_advancedSearch.html.erb
+++ b/ZONE-watcher/app/views/home/_advancedSearch.html.erb
@@ -11,176 +11,178 @@
 	}); 
 </script>
 <form action="/items" method="GET" id="formModal">
-<div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-		×
-	</button>
-	<h3 id="myModalLabel">Recherche sémantique : Sources</h3>
-</div>
-<div class="modal-body bodyModal">
-	<div class="row-fluid" xmlns="http://www.w3.org/1999/html">
-		<div class="span12">
-			<div class="tabbable tabs-left">
-				<div class="tab-content">
-					<div class="tab-pane active" id="Sources">
-						<div class="row-fluid modalContentPane">
-							<div class="span1"></div>
-							<!--3 images flipper -->
-							<div class="span5">
-								<ul class="unstyled">
-									<li>
-										<div class="flipper">
-											<div class="front"><img class="circleImage" src="/assets/foregroundTwitter.jpg"/>
-											</div>
-											<div id="formTwitter" class="back span11" style="background-image: url('/assets/backgroundTwitter.jpg');padding: 4px;">
-												<p></p><p></p>
-												<p>
-													<i class="icon-white icon-user"></i>
-													<input name="inputLogin" type="text" class="inputLogin span10" id="loginTwitter" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchTwitter').prop('readonly',true);$('#searchTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}">
-												</p>
-												<p>
-													<i class="icon-search icon-white"></i>
-													<input name="inputSearch" type="text" class="inputSearch span10" id="searchTwitter" placeholder="Tag" readonly onclick="$(this).prop('readonly',false);$('#loginTwitter').prop('readonly',true);$('#loginTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}" />
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+			×
+		</button>
+		<h3 class="titleSource"><%= raw t 'semanticsource.title' %></h3>
+		<h3 class="titleFiltering hidden"><%= raw t 'semanticfiltering.title' %></h3>
+	</div>
+	<div class="modal-body bodyModal">
+		<div class="row-fluid" xmlns="http://www.w3.org/1999/html">
+			<div class="span12">
+				<div class="tabbable tabs-left">
+					<div class="tab-content">
+						<div class="tab-pane active" id="Sources">
+							<div class="row-fluid modalContentPane">
+								<div class="span1"></div>
+								<!--3 images flipper -->
+								<div class="span5">
+									<ul class="unstyled">
+										<li>
+											<div class="flipper">
+												<div class="front"><img class="circleImage" src="/assets/foregroundTwitter.jpg"/>
+												</div>
+												<div id="formTwitter" class="back span11" style="background-image: url('/assets/backgroundTwitter.jpg');padding: 4px;">
+													<p></p><p></p>
+													<p>
+														<i class="icon-white icon-user"></i>
+														<input name="inputLogin" type="text" class="inputLogin span10" id="loginTwitter" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchTwitter').prop('readonly',true);$('#searchTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}">
+													</p>
+													<p>
+														<i class="icon-search icon-white"></i>
+														<input name="inputSearch" type="text" class="inputSearch span10" id="searchTwitter" placeholder="Tag" readonly onclick="$(this).prop('readonly',false);$('#loginTwitter').prop('readonly',true);$('#loginTwitter').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formTwitter');return false;}" />
 
-													<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formTwitter');return false;">
-														Tout
-													</button>
-													<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formTwitter');return false;">
-														Ajouter
-													</button>
-												</p>
+														<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formTwitter');return false;">
+															<%= raw t 'semanticsource.button.addall' %>
+														</button>
+														<button class="pull-right btn btn-info" type="button" onclick="addRowSourceTable('#formTwitter');return false;">
+															<%= raw t 'semanticsource.button.addone' %>
+														</button>
+													</p>
+												</div>
 											</div>
-										</div>
-									</li>
-									<li>
-										<div class="flipper">
-											<div class="front"><img class="circleImage" src="/assets/foregroundGoogle.jpg"/>
-											</div>
-											<div id="formGoogle" class="span11 back" style="background-image: url('/assets/backgroundGoogle.jpg');padding: 4px;">
-												<p></p><p></p>
-												<p>
-													<i class="icon-white icon-user"></i>
-													<input name="inputLogin" id="loginGoogle" type="text" class="inputLogin span10" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchGoogle').prop('readonly',true);$('#searchGoogle').val('');" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formGoogle');return false;}">
-												</p>
-												<p>
-													<i class="icon-white icon-search"></i>
-													<input name="inputSearch" id="searchGoogle" type="text" class="inputSearch span10" placeholder="Search" readonly onclick="$(this).prop('readonly',false);$('#loginGoogle').prop('readonly',true);$('#loginGoogle').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formGoogle');return false;}">
+										</li>
+										<li>
+											<div class="flipper">
+												<div class="front"><img class="circleImage" src="/assets/foregroundGoogle.jpg"/>
+												</div>
+												<div id="formGoogle" class="span11 back" style="background-image: url('/assets/backgroundGoogle.jpg');padding: 4px;">
+													<p></p><p></p>
+													<p>
+														<i class="icon-white icon-user"></i>
+														<input name="inputLogin" id="loginGoogle" type="text" class="inputLogin span10" placeholder="Login" onclick="$(this).prop('readonly',false);$('#searchGoogle').prop('readonly',true);$('#searchGoogle').val('');" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formGoogle');return false;}">
+													</p>
+													<p>
+														<i class="icon-white icon-search"></i>
+														<input name="inputSearch" id="searchGoogle" type="text" class="inputSearch span10" placeholder="Search" readonly onclick="$(this).prop('readonly',false);$('#loginGoogle').prop('readonly',true);$('#loginGoogle').val('');" onKeyPress="if (event.keyCode == 13){ addRowSourceTable('#formGoogle');return false;}">
 
-													<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formGoogle');return false;">
-														Tout
-													</button>
-													<button class="pull-right btn btn-danger" type="button" onclick="addRowSourceTable('#formGoogle');return false;">
-														Ajouter
-													</button>
-												</p>
+														<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formGoogle');return false;">
+															<%= raw t 'semanticsource.button.addall' %>
+														</button>
+														<button class="pull-right btn btn-danger" type="button" onclick="addRowSourceTable('#formGoogle');return false;">
+															<%= raw t 'semanticsource.button.addone' %>
+														</button>
+													</p>
+												</div>
 											</div>
-										</div>
-									</li>
-									<li>
-										<div class="flipper">
-											<div class="front"><img class="circleImage" src="/assets/foregroundRSS.jpg"/>
-											</div>
-											<div id="formRSS" class="span11 back" style="background-image: url('/assets/backgroundRSS.jpg');padding: 4px;">
-												<p></p><p></p>
-												<p>
-													<input name="inputHidden" type="hidden" class="inputLogin span10">
-												</p>
-												<p>
-													<i class="icon-white icon-search"></i>
-													<input name="inputSearch" type="text" class="inputSearch span10" placeholder="URL" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formRSS');return false;}">
+										</li>
+										<li>
+											<div class="flipper">
+												<div class="front"><img class="circleImage" src="/assets/foregroundRSS.jpg"/>
+												</div>
+												<div id="formRSS" class="span11 back" style="background-image: url('/assets/backgroundRSS.jpg');padding: 4px;">
+													<p></p><p></p>
+													<p>
+														<input name="inputHidden" type="hidden" class="inputLogin span10">
+													</p>
+													<p>
+														<i class="icon-white icon-search"></i>
+														<input name="inputSearch" type="text" class="inputSearch span10" placeholder="URL" onKeyPress="if (event.keyCode == 13){addRowSourceTable('#formRSS');return false;}">
 
-													<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formRSS');return false;">
-														Tout
-													</button>
-													<button class="pull-right btn btn-warning" type="button" onclick="addRowSourceTable('#formRSS');return false;">
-														Ajouter
-													</button>
-												</p>
+														<button class="pull-left btn btn-success" type="button" onclick="addAllSourceTable('formRSS');return false;">
+															<%= raw t 'semanticsource.button.addall' %>
+														</button>
+														<button class="pull-right btn btn-warning" type="button" onclick="addRowSourceTable('#formRSS');return false;">
+															<%= raw t 'semanticsource.button.addone' %>
+														</button>
+													</p>
+												</div>
 											</div>
-										</div>
-									</li>
-								</ul>
-							</div>
+										</li>
+									</ul>
+								</div>
 
-							<!-- tableau récap -->
-							<div class="span5 sourceOverflow">
-								<table class="table table-striped table-bordered table-hover pre-scrollable" id="sourceTable">
-									<thead>
-										<tr>
-											<th class="span1">Type</th>
-											<th>Intitulé</th>
-										</tr>
-									</thead>
-									<tbody></tbody>
-								</table>
+								<!-- tableau récap -->
+								<div class="span5 sourceOverflow">
+									<table class="table table-striped table-bordered table-hover pre-scrollable" id="sourceTable">
+										<thead>
+											<tr>
+												<th class="span1"><%= raw t 'semanticsource.table.keyword' %></th>
+												<th><%= raw t 'semanticsource.table.content' %></th>
+											</tr>
+										</thead>
+										<tbody></tbody>
+									</table>
+								</div>
 							</div>
 						</div>
-					</div>
-					<!-- Panel de filtrage -->
-					<div class="tab-pane" id="Filtering">
-						<div class="modalContentPane">
-							<div class="row-fluid">
-								<div class="span1"></div>
-								<div class="span5">
-									<h3>Mot-clé</h3>
-									<div class="input-prepend input-append">
-										<div class="btn-group">
-											<button class="btn" id="dropdownKeyword" value='AVEC' onclick='return false;'>
-												AVEC
+						<!-- Panel de filtrage -->
+						<div class="tab-pane" id="Filtering">
+							<div class="modalContentPane">
+								<div class="row-fluid">
+									<div class="span1"></div>
+									<div class="span5">
+										<h3><%= raw t 'semanticfiltering.keyword.title' %></h3>
+										<div class="input-prepend input-append">
+											<div class="btn-group">
+												<button class="btn" id="dropdownKeyword" value='AVEC' onclick='return false;'>
+													<%= raw t 'semanticfiltering.keyword.with' %>
+												</button>
+												<button class="btn dropdown-toggle" data-toggle="dropdown">
+													<span class="caret"></span>
+												</button>
+												<ul class="dropdownKeywordFiltering dropdown-menu" >
+													<li onclick="changeDropdownKeyword('AVEC')">
+														<%= raw t 'semanticfiltering.keyword.with' %>
+													</li>
+											 		<li onclick="changeDropdownKeyword('SANS')">
+														<%= raw t 'semanticfiltering.keyword.without' %>
+													</li>
+												</ul>
+											</div>
+											<input id="keyword" type="text" placeholder="Keyword" onkeypress="if (event.keyCode == 13){ addFilter(); return false;}" onkeyup="updateKeywordTable();return false;">
+											<button class="btn btn-success pull-right" onclick="addFilter(); return false;">
+												<%= raw t 'semanticfiltering.button.addone' %>
 											</button>
-											<button class="btn dropdown-toggle" data-toggle="dropdown">
-												<span class="caret"></span>
-											</button>
-											<ul class="dropdownKeywordFiltering dropdown-menu" >
-												<li onclick="changeDropdownKeyword('AVEC')">
-													AVEC
-												</li>
-												<li onclick="changeDropdownKeyword('SANS')">
-													SANS
-												</li>
-											</ul>
 										</div>
-										<input id="keyword" type="text" placeholder="Keyword" onkeypress="if (event.keyCode == 13){ addFilter(); return false;}" onkeyup="updateKeywordTable();return false;">
-										<button class="btn btn-success pull-right" onclick="addFilter(); return false;">
-											Ajouter
+										<h3><%= raw t 'semanticfiltering.linkword.title' %></h3>
+										<button class="btn" onclick="select();return false;">
+											<%= raw t 'semanticfiltering.linkword.selectall' %>
 										</button>
-									</div>
-									<h3>Mots liés</h3>
-									<button class="btn" onclick="select();return false;">
-										TOUS
-									</button>
-									<button class="btn" onclick="unselect();return false;">
-										AUCUN
-									</button>
-									<div class="keywordOverflow">
-										<table class="table table-striped table-bordered table-hover pre-scrollable" id="keywordTable">
-											<tbody></tbody>
-										</table>
+										<button class="btn" onclick="unselect();return false;">
+											<%= raw t 'semanticfiltering.linkword.unselect' %>
+										</button>
+										<div class="keywordOverflow">
+											<table class="table table-striped table-bordered table-hover pre-scrollable" id="keywordTable">
+												<tbody></tbody>
+											</table>
+										</div>
+
+										<h3><%= raw t 'semanticfiltering.easyfilter.title' %></h3>
 									</div>
 
-									<h3>Votre filtre</h3>
-								</div>
-
-								<div class="span5" >
-									<h3>Votre filtrage</h3>
-									<div class='filteringOverflow'>
-										<table class="table table-striped table-bordered table-hover pre-scrollable" id="filteringTable">
-											<thead>
-												<tr>
-													<th hidden>ID</th>
-													<th class="span1">Attribut</th>
-													<th class="span4">Intitulé</th>
-												</tr>
-											</thead>
-											<tbody></tbody>
-										</table>
+									<div class="span5" >
+										<h3><%= raw t 'semanticfiltering.table.title' %></h3>
+										<div class='filteringOverflow'>
+											<table class="table table-striped table-bordered table-hover pre-scrollable" id="filteringTable">
+												<thead>
+													<tr>
+														<th hidden>ID</th>
+														<th class="span1"><%= raw t 'semanticfiltering.table.keyword' %></th>
+														<th class="span4"><%= raw t 'semanticfiltering.table.content' %></th>
+													</tr>
+												</thead>
+												<tbody></tbody>
+											</table>
+										</div>
 									</div>
 								</div>
-							</div>
-							<div class="row-fluid">
-								<div class="span1"></div>
-								<div class="span10">
-									<textarea id="filteringArea" readonly style="width:100%; resize: none"></textarea>
+								<div class="row-fluid">
+									<div class="span1"></div>
+									<div class="span10">
+										<textarea id="filteringArea" readonly style="width:100%; resize: none"></textarea>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -188,65 +190,63 @@
 				</div>
 			</div>
 		</div>
+		<div id="movedData"></div>
+		<table id="fakesynonyme" hidden>
+			<thead></thead>
+			<tbody>
+				<tr>
+					<td class="mot" value="mooc">mooc</td>
+					<td class="synonyme">learning</td>
+				</tr>
+				<tr>
+					<td class="mot" value="mooc">mooc</td>
+					<td class="synonyme">moocmooc</td>
+				</tr>
+				<tr>
+					<td class="mot" value="mooc">mooc</td>
+					<td class="synonyme">education</td>
+				</tr>
+				<tr>
+					<td class="mot" value="mooc">inria</td>
+					<td class="synonyme">laboratoire (recherche)</td>
+				</tr>
+				<tr>
+					<td class="mot" value="mooc">inria</td>
+					<td class="synonyme">laboratoire (batiment)</td>
+				</tr>
+				<tr>
+					<td class="mot" value="mooc">inria</td>
+					<td class="synonyme">recherche</td>
+				</tr>
+				<tr>
+					<td class="mot" value="mooc">inria</td>
+					<td class="synonyme">wimmics</td>
+				</tr>
+				<tr>
+					<td class="mot" value="elearning">elearning</td>
+					<td class="synonyme">onlinelearning</td>
+				</tr>
+				<tr>
+					<td class="mot" value="elearning">elearning</td>
+					<td class="synonyme">education</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
-	<div id="movedData">
+	<div class="modal-footer">
+		<a href="#Sources" data-toggle="tab">
+		<button id="btnTabPrevious" class="btn btn-info" style="display :none;" onclick="setButtonNextTab();">
+			<%= raw t 'modal.button.previous' %>
+		</button></a>
+		<a href="#Filtering" data-toggle="tab">
+		<button id="btnTabNext" class="btn btn-info" onclick="setButtonPreviousTab();">
+			<%= raw t 'modal.button.next' %>
+		</button></a>
+		<!--<a href="http://www.reador.net/items">-->
+		<button id='btnGoReador' type="submit" style="display :none;" class="btn btn-success" onclick="movingData()">
+			<%= raw t 'modal.button.go' %>
+		</button>
 	</div>
-	<table id="fakesynonyme" hidden>
-		<thead></thead>
-		<tbody>
-			<tr>
-				<td class="mot" value="mooc">mooc</td>
-				<td class="synonyme">learning</td>
-			</tr>
-			<tr>
-				<td class="mot" value="mooc">mooc</td>
-				<td class="synonyme">moocmooc</td>
-			</tr>
-			<tr>
-				<td class="mot" value="mooc">mooc</td>
-				<td class="synonyme">education</td>
-			</tr>
-			<tr>
-				<td class="mot" value="mooc">inria</td>
-				<td class="synonyme">laboratoire (recherche)</td>
-			</tr>
-			<tr>
-				<td class="mot" value="mooc">inria</td>
-				<td class="synonyme">laboratoire (batiment)</td>
-			</tr>
-			<tr>
-				<td class="mot" value="mooc">inria</td>
-				<td class="synonyme">recherche</td>
-			</tr>
-			<tr>
-				<td class="mot" value="mooc">inria</td>
-				<td class="synonyme">wimmics</td>
-			</tr>
-			<tr>
-				<td class="mot" value="elearning">elearning</td>
-				<td class="synonyme">onlinelearning</td>
-			</tr>
-			<tr>
-				<td class="mot" value="elearning">elearning</td>
-				<td class="synonyme">education</td>
-			</tr>
-		</tbody>
-	</table>
-</div>
-<div class="modal-footer">
-	<a href="#Sources" data-toggle="tab">
-	<button id="btnTabSource" class="btn btn-info" style="display :none;" onclick="setButtonNextTab();">
-		< Précedent
-	</button></a>
-	<a href="#Filtering" data-toggle="tab">
-	<button id="btnTabFiltrage" class="btn btn-info" onclick="setButtonPreviousTab();">
-		Suivant >
-	</button></a>
-	<!--<a href="http://www.reador.net/items">-->
-	<button id='btnGoReador' type="submit" style="display :none;" class="btn btn-success" onclick="movingData()">
-		Go Reador
-	</button>
-</div>
 </form>
 <!--</div>-->
 
