--- a/ZONE-watcher/app/views/home/_advancedSearch.html.erb
+++ b/ZONE-watcher/app/views/home/_advancedSearch.html.erb
@@ -103,7 +103,7 @@
 									</ul>
 								</div>
 
-								<!-- tableau récap -->
+								<!-- resume table-->
 								<div class="span5 sourceOverflow">
 									<table class="table table-striped table-bordered table-hover pre-scrollable" id="sourceTable">
 										<thead>
@@ -117,7 +117,7 @@
 								</div>
 							</div>
 						</div>
-						<!-- Panel de filtrage -->
+						<!-- Filtering panel -->
 						<div class="tab-pane" id="Filtering">
 							<div class="modalContentPane">
 								<div class="row-fluid">
