--- a/ZONE-watcher/app/views/home/_advancedSearch.html.erb
+++ b/ZONE-watcher/app/views/home/_advancedSearch.html.erb
@@ -31,9 +31,9 @@
 									<ul class="unstyled">
 										<li>
 											<div class="flipper">
-												<div class="front"><img class="circleImage" src="/assets/foregroundTwitter.jpg"/>
+												<div class="front"><img class="circleImage" src="/assets/foregroundTwitter.png"/>
 												</div>
-												<div id="formTwitter" class="back span11" style="background-image: url('/assets/backgroundTwitter.jpg');padding: 4px;">
+												<div id="formTwitter" class="back span11" style="background-image: url('/assets/backgroundTwitter.png');padding: 4px;">
 													<p></p><p></p>
 													<p>
 														<i class="icon-white icon-user"></i>
@@ -55,9 +55,9 @@
 										</li>
 										<li>
 											<div class="flipper">
-												<div class="front"><img class="circleImage" src="/assets/foregroundGoogle.jpg"/>
+												<div class="front"><img class="circleImage" src="/assets/foregroundGoogle.png"/>
 												</div>
-												<div id="formGoogle" class="span11 back" style="background-image: url('/assets/backgroundGoogle.jpg');padding: 4px;">
+												<div id="formGoogle" class="span11 back" style="background-image: url('/assets/backgroundGoogle.png');padding: 4px;">
 													<p></p><p></p>
 													<p>
 														<i class="icon-white icon-user"></i>
@@ -79,9 +79,9 @@
 										</li>
 										<li>
 											<div class="flipper">
-												<div class="front"><img class="circleImage" src="/assets/foregroundRSS.jpg"/>
+												<div class="front"><img class="circleImage" src="/assets/foregroundRSS.png"/>
 												</div>
-												<div id="formRSS" class="span11 back" style="background-image: url('/assets/backgroundRSS.jpg');padding: 4px;">
+												<div id="formRSS" class="span11 back" style="background-image: url('/assets/backgroundRSS.png');padding: 4px;">
 													<p></p><p></p>
 													<p>
 														<input name="inputHidden" type="hidden" class="inputLogin span10">
@@ -123,43 +123,52 @@
 								<div class="row-fluid">
 									<div class="span1"></div>
 									<div class="span5">
+										<div class="row-fluid">
 										<h3><%= raw t 'semanticfiltering.keyword.title' %></h3>
+										</div>
+										<div class="row-fluid">
 										<div class="input-prepend input-append">
-											<div class="btn-group">
-												<button class="btn" id="dropdownKeyword" value='AVEC' onclick='return false;'>
-													<%= raw t 'semanticfiltering.keyword.with' %>
+											<div id="btnGroupAttr" class="btn-group" data-toggle="buttons-radio">
+												<button id="btnWITH" type="button" class="btn btn-success" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.with' %>>
+													<i class="icon-plus"></i>
 												</button>
-												<button class="btn dropdown-toggle" data-toggle="dropdown">
-													<span class="caret"></span>
+												<button id="btnAND" type="button" class="btn btn-success hidden" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.and' %> style="border-radius: 4px 0 0 4px">
+													<i class="icon-plus"></i>
 												</button>
-												<ul class="dropdownKeywordFiltering dropdown-menu" >
-													<li onclick="changeDropdownKeyword('AVEC')">
-														<%= raw t 'semanticfiltering.keyword.with' %>
-													</li>
-											 		<li onclick="changeDropdownKeyword('SANS')">
-														<%= raw t 'semanticfiltering.keyword.without' %>
-													</li>
-												</ul>
+												<button id="btnOR" type="button" class="btn btn-info" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.or' %> disabled>
+													<i class="icon-random"></i>
+												</button>
+												<button id="btnWITHOUT" type="button" class="btn btn-danger" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.without' %>>
+													<i class="icon-minus"></i>
+												</button>
 											</div>
-											<input id="keyword" type="text" placeholder="Keyword" onkeypress="if (event.keyCode == 13){ addFilter(); return false;}" onkeyup="updateKeywordTable();return false;">
+											<input id="keyword" type="text" placeholder="Keyword" style="max-width:170px"onkeypress="if (event.keyCode == 13){ addFilter(); return false;}" onkeyup="updateKeywordTable();return false;">
 											<button class="btn btn-success pull-right" onclick="addFilter(); return false;">
 												<%= raw t 'semanticfiltering.button.addone' %>
 											</button>
 										</div>
+										</div>
+										<div class="row-fluid">
 										<h3><%= raw t 'semanticfiltering.linkword.title' %></h3>
+										</div>
+										<div class="row-fluid">
 										<button class="btn" onclick="select();return false;">
 											<%= raw t 'semanticfiltering.linkword.selectall' %>
 										</button>
 										<button class="btn" onclick="unselect();return false;">
 											<%= raw t 'semanticfiltering.linkword.unselect' %>
 										</button>
+										</div>
+										<div class="row-fluid">
 										<div class="keywordOverflow">
 											<table class="table table-striped table-bordered table-hover pre-scrollable" id="keywordTable">
 												<tbody></tbody>
 											</table>
 										</div>
-
+										</div>
+										<div class="row-fluid">
 										<h3><%= raw t 'semanticfiltering.easyfilter.title' %></h3>
+										</div>
 									</div>
 
 									<div class="span5" >
