Added autocompletion + first draft of related
Added first draft of related and autocompletion

--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -116,3 +116,34 @@ ul.sortable li {
 #formModal {
   margin : 0;
 }
+
+.ui-autocomplete { 
+  z-index:2147483647; 
+   max-width:184px;
+   //border: solid 1px #f9f9f9;
+   border-radius: 2px;
+}
+
+.ui-menu-item{
+  list-style-type: none;
+  padding-left : 3px;
+}
+
+.ui-menu li:nth-child(2n+1)
+{
+    background-color: #f9f9f9;
+    border-top: 1px solid #dddddd;
+    border-right: 1px solid #dddddd;
+    border-left: 1px solid #dddddd;
+}
+.ui-menu li:nth-child(2n)
+{
+    background-color: white;
+    border-top: 1px solid #dddddd;
+    border-right: 1px solid #dddddd;
+    border-left: 1px solid #dddddd;
+}
+
+.ui-menu li:last-child{
+  border-bottom: 1px solid #dddddd;
+}
