--- a/ZONE-watcher/app/views/home/_advancedSearch.html.erb
+++ b/ZONE-watcher/app/views/home/_advancedSearch.html.erb
@@ -10,6 +10,7 @@
 
 	}); 
 </script>
+
 <form action="/items" method="GET" id="formModal">
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
@@ -124,50 +125,64 @@
 									<div class="span1"></div>
 									<div class="span5">
 										<div class="row-fluid">
-										<h3><%= raw t 'semanticfiltering.keyword.title' %></h3>
+											<h3><%= raw t 'semanticfiltering.keyword.title' %></h3>
 										</div>
 										<div class="row-fluid">
-										<div class="input-prepend input-append">
-											<div id="btnGroupAttr" class="btn-group" data-toggle="buttons-radio">
-												<button id="btnWITH" type="button" class="btn btn-success" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.with' %>>
-													<i class="icon-plus"></i>
-												</button>
-												<button id="btnAND" type="button" class="btn btn-success hidden" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.and' %> style="border-radius: 4px 0 0 4px">
-													<i class="icon-plus"></i>
-												</button>
-												<button id="btnOR" type="button" class="btn btn-info" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.or' %> disabled>
-													<i class="icon-random"></i>
-												</button>
-												<button id="btnWITHOUT" type="button" class="btn btn-danger" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.without' %>>
-													<i class="icon-minus"></i>
+											<div class="input-prepend input-append">
+
+												<div id="btnGroupAttr" class="btn-group" data-toggle="buttons-radio">
+													<button id="btnWITH" type="button" class="btn btn-success" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.with' %>>
+														<i class="icon-plus"></i>
+													</button>
+													<script>
+														$('#btnWITH').button('toggle');
+													</script>
+													<button id="btnAND" type="button" class="btn btn-success hidden" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.and' %> style="border-radius: 4px 0 0 4px">
+														<i class="icon-plus"></i>
+													</button>
+													<button id="btnOR" type="button" class="btn btn-info" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.or' %> disabled>
+														<b>O</b>
+													</button>
+													<button id="btnWITHOUT" type="button" class="btn btn-danger" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.without' %>>
+														<i class="icon-minus"></i>
+													</button>
+												</div>
+												<input id="keyword" type="text" placeholder="Keyword" style="max-width:170px" onkeypress="if (event.keyCode == 13){ addFilter(); return false;}" onkeyup="updateKeywordTable();return false;">
+												<script>
+													$(function() {
+														$("#keyword").autocomplete({
+															source : "complete_entities/a.json",
+															search : function(event, ui) {
+																$("#keyword").autocomplete({source : "complete_entities/"+$("#keyword").val()+".json"});
+															}
+														});
+													});
+												</script>
+												<button class="btn btn-success pull-right" onclick="addFilter(); return false;">
+													<%= raw t 'semanticfiltering.button.addone' %>
 												</button>
 											</div>
-											<input id="keyword" type="text" placeholder="Keyword" style="max-width:170px"onkeypress="if (event.keyCode == 13){ addFilter(); return false;}" onkeyup="updateKeywordTable();return false;">
-											<button class="btn btn-success pull-right" onclick="addFilter(); return false;">
-												<%= raw t 'semanticfiltering.button.addone' %>
+										</div>
+										<div class="row-fluid">
+											<h3><%= raw t 'semanticfiltering.linkword.title' %></h3>
+										</div>
+										<div class="row-fluid">
+											<button class="btn" onclick="select();return false;">
+												<%= raw t 'semanticfiltering.linkword.selectall' %>
+											</button>
+											<button class="btn" onclick="unselect();return false;">
+												<%= raw t 'semanticfiltering.linkword.unselect' %>
 											</button>
 										</div>
+										<div class="row-fluid">
+											<div class="keywordOverflow">
+												<table class="table table-striped table-bordered table-hover pre-scrollable" id="keywordTable">
+													<tbody></tbody>
+												</table>
+											</div>
 										</div>
 										<div class="row-fluid">
-										<h3><%= raw t 'semanticfiltering.linkword.title' %></h3>
-										</div>
-										<div class="row-fluid">
-										<button class="btn" onclick="select();return false;">
-											<%= raw t 'semanticfiltering.linkword.selectall' %>
-										</button>
-										<button class="btn" onclick="unselect();return false;">
-											<%= raw t 'semanticfiltering.linkword.unselect' %>
-										</button>
-										</div>
-										<div class="row-fluid">
-										<div class="keywordOverflow">
-											<table class="table table-striped table-bordered table-hover pre-scrollable" id="keywordTable">
-												<tbody></tbody>
-											</table>
-										</div>
-										</div>
-										<div class="row-fluid">
-										<h3><%= raw t 'semanticfiltering.easyfilter.title' %></h3>
+											<h3><%= raw t 'semanticfiltering.easyfilter.title' %></h3>
 										</div>
 									</div>
 
