--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -121,7 +121,7 @@ ul.sortable li {
   z-index:2147483647; 
    max-width:184px;
    //border: solid 1px #f9f9f9;
-   border-radius: 2px;
+   
 }
 
 .ui-menu-item{
@@ -146,4 +146,19 @@ ul.sortable li {
 
 .ui-menu li:last-child{
   border-bottom: 1px solid #dddddd;
+  border-radius:0 0 4px 4px;
+}
+
+.ui-menu li:hover{
+   background-color: #f5f5f5;
+}
+.ui-corner-all:hover{
+  background : none;
+  color:black;
+  text-decoration:none;
+  cursor:pointer;
+}
+
+#btnWITHOUT{
+  border-radius : 0 0 0 0;
 }
