--- a/ZONE-watcher/app/views/home/_advancedSearch.html.erb
+++ b/ZONE-watcher/app/views/home/_advancedSearch.html.erb
@@ -147,7 +147,7 @@
 														<i class="icon-minus"></i>
 													</button>
 												</div>
-												<input id="keyword" type="text" placeholder="Keyword" style="max-width:170px" onkeypress="if (event.keyCode == 13){ addFilter();$('#keyword').autocomplete('close'); return false;}" onkeyup="updateKeywordTable();return false;">
+												<input id="keyword" type="text" placeholder="Keyword" style="max-width:170px" onkeypress="if (event.keyCode == 13){ addFilter();$('#keyword').autocomplete('close'); return false;}" onkeyup="askUpdateKeywordTable();return false;">
 												<script>
 													$(function() {
 														$("#keyword").autocomplete({
