--- a/ZONE-watcher/app/views/home/_advancedSearch.html.erb
+++ b/ZONE-watcher/app/views/home/_advancedSearch.html.erb
@@ -34,7 +34,7 @@
 											<div class="flipper">
 												<div class="front"><img class="circleImage" src="/assets/foregroundTwitter.png"/>
 												</div>
-												<div id="formTwitter" class="back span11" style="background-image: url('/assets/backgroundTwitter.png');padding: 4px;">
+												<div id="formTwitter" class="back paddingFour" style="background-image: url('/assets/backgroundTwitter.png');">
 													<p></p><p></p>
 													<p>
 														<i class="icon-white icon-user"></i>
@@ -58,7 +58,7 @@
 											<div class="flipper">
 												<div class="front"><img class="circleImage" src="/assets/foregroundGoogle.png"/>
 												</div>
-												<div id="formGoogle" class="span11 back" style="background-image: url('/assets/backgroundGoogle.png');padding: 4px;">
+												<div id="formGoogle" class="paddingFour back" style="background-image: url('/assets/backgroundGoogle.png');">
 													<p></p><p></p>
 													<p>
 														<i class="icon-white icon-user"></i>
@@ -82,7 +82,7 @@
 											<div class="flipper">
 												<div class="front"><img class="circleImage" src="/assets/foregroundRSS.png"/>
 												</div>
-												<div id="formRSS" class="span11 back" style="background-image: url('/assets/backgroundRSS.png');padding: 4px;">
+												<div id="formRSS" class="back paddingFour" style="background-image: url('/assets/backgroundRSS.png');">
 													<p></p><p></p>
 													<p>
 														<input name="inputHidden" type="hidden" class="inputLogin span10">
