--- a/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/advanced_search_box.css.scss
@@ -120,26 +120,25 @@ ul.sortable li {
 .ui-autocomplete { 
   z-index:2147483647; 
    max-width:184px;
-   //border: solid 1px #f9f9f9;
    
 }
 
 .ui-menu-item{
   list-style-type: none;
-  padding-left : 3px;
+  padding-left:10px;
+  font-size: 12px;
 }
 
 .ui-menu li:nth-child(2n+1)
 {
-    background-color: #f9f9f9;
-    border-top: 1px solid #dddddd;
+    
+    background-color: white;
     border-right: 1px solid #dddddd;
     border-left: 1px solid #dddddd;
 }
 .ui-menu li:nth-child(2n)
 {
     background-color: white;
-    border-top: 1px solid #dddddd;
     border-right: 1px solid #dddddd;
     border-left: 1px solid #dddddd;
 }
@@ -150,11 +149,15 @@ ul.sortable li {
 }
 
 .ui-menu li:hover{
-   background-color: #f5f5f5;
+      background-color: #0088CC;
 }
+
+.ui-menu li:hover a{
+   color:white;
+}
+
 .ui-corner-all:hover{
   background : none;
-  color:black;
   text-decoration:none;
   cursor:pointer;
 }
