--- a/ZONE-watcher/app/views/home/_advancedSearch.html.erb
+++ b/ZONE-watcher/app/views/home/_advancedSearch.html.erb
@@ -153,10 +153,12 @@
 														$("#keyword").autocomplete({
 															source : "complete_entities/a.json",
 															search : function(event, ui) {
-																$("#keyword").autocomplete({source : "complete_entities/"+$("#keyword").val()+".json"});
+																$("#keyword").autocomplete({
+																	source : "complete_entities/" + $("#keyword").val() + ".json"
+																});
 															},
-															close: function( event, ui ){
-																updateKeywordTable();
+															close : function(event, ui) {
+																askUpdateKeywordTable();
 															}
 														});
 													});
@@ -179,9 +181,16 @@
 										</div>
 										<div class="row-fluid">
 											<div class="keywordOverflow">
+												<div id="progressBarFiltering" class="progress progress-striped active" style="margin-top:3em;">
+													<div class="bar bar-success" style="width: 100%;"></div>
+												</div>
 												<table class="table table-striped table-bordered table-hover pre-scrollable" id="keywordTable">
 													<tbody></tbody>
 												</table>
+												<script>
+													$("#keywordTable").hide();
+													$("#progressBarFiltering").hide();
+												</script>
 											</div>
 										</div>
 										<div class="row-fluid">
