Hide an overflow
Now hide the y-overflow when showing the results of autocompletion

--- a/ZONE-watcher/app/views/home/_advancedSearch.html.erb
+++ b/ZONE-watcher/app/views/home/_advancedSearch.html.erb
@@ -7,8 +7,13 @@
 <script>
 	$('#advancedSearchModal').on('hide', function() {
 		rebootGeneralModal();
+		$('body').css('overflow-y','auto');
 
 	}); 
+	$('#advancedSearchModal').on('show', function() {
+		rebootGeneralModal();
+		$('body').css('overflow-y','hidden');
+	});
 </script>
 
 <form action="/items" method="GET" id="formModal">
@@ -156,6 +161,9 @@
 																$("#keyword").autocomplete({
 																	source : "complete_entities/" + $("#keyword").val() + ".json"
 																});
+															},
+															close : function(){
+																askUpdateKeywordTable();
 															}
 														});
 													});
