--- a/ZONE-watcher/app/views/home/_advancedSearch.html.erb
+++ b/ZONE-watcher/app/views/home/_advancedSearch.html.erb
@@ -164,7 +164,8 @@
 															},
 															close : function(){
 																askUpdateKeywordTable();
-															}
+															},
+															minLength : 4
 														});
 													});
 
