--- a/ZONE-watcher/app/views/home/_advancedSearch.html.erb
+++ b/ZONE-watcher/app/views/home/_advancedSearch.html.erb
@@ -4,19 +4,8 @@
 </div>-->
 
 <!--<div class="modal-body">-->
-<script>
-	$('#advancedSearchModal').on('hide', function() {
-		rebootGeneralModal();
-		$('body').css('overflow-y','auto');
-
-	}); 
-	$('#advancedSearchModal').on('show', function() {
-		$('body').css('overflow-y','hidden');
-	});
-</script>
-
 <form action="/items" method="GET" id="formModal">
-	<div class="modal-header">
+	<div class="modal-header" >
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 			×
 		</button>
@@ -138,9 +127,6 @@
 													<button id="btnWITH" type="button" class="btn btn-success" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.with' %>>
 														<i class="icon-plus"></i>
 													</button>
-													<script>
-														$('#btnWITH').button('toggle');
-													</script>
 													<button id="btnAND" type="button" class="btn btn-success hidden" data-toggle="tooltip" title=<%= raw t 'semanticfiltering.keyword.and' %> style="border-radius: 4px 0 0 4px">
 														<i class="icon-plus"></i>
 													</button>
@@ -151,24 +137,7 @@
 														<i class="icon-minus"></i>
 													</button>
 												</div>
-												<input id="keyword" type="text" placeholder="Keyword" style="max-width:170px" onkeypress="if (event.keyCode == 13){ addFilter();$('#keyword').autocomplete('close'); return false;}" onkeyup="askUpdateKeywordTable();return false;">
-												<script>
-													$(function() {
-														$("#keyword").autocomplete({
-															source : "complete_entities/a.json",
-															search : function(event, ui) {
-																$("#keyword").autocomplete({
-																	source : "complete_entities/" + $("#keyword").val() + ".json"
-																});
-															},
-															close : function(){
-																askUpdateKeywordTable();
-															},
-															minLength : 4
-														});
-													});
-
-												</script>
+												<input id="keyword" type="text" placeholder="Keyword" style="max-width:170px" onkeypress="keywordComplete();" onkeyup="askUpdateKeywordTable();return false;">
 												<button class="btn btn-success pull-right" onclick="addFilter(); return false;">
 													<%= raw t 'semanticfiltering.button.addone' %>
 												</button>
@@ -193,10 +162,6 @@
 												<table class="table table-striped table-bordered table-hover pre-scrollable" id="keywordTable">
 													<tbody></tbody>
 												</table>
-												<script>
-													$("#keywordTable").hide();
-													$("#progressBarFiltering").hide();
-												</script>
 											</div>
 										</div>
 										<div class="row-fluid">
