--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -34,13 +34,17 @@
             end %>
         <div class="btn-toolbar">
             <% @item.props.each do |item|
-               item[1].each do |value|
-            %>
-
-                <div class="btn-group">
-                    <%= raw getButtonForFilter(Filter.new(:prop => item[0], :value => value)) %>
-                </div>
-            <%end end%>
+               item[1].each do |value|	
+				linkval = getButtonForFilter(Filter.new(:prop => item[0], :value => value))
+        		if !linkval then
+        			next
+        		end
+            		%>
+        		<div class="btn-group">
+        			<%= linkval  %>
+        		</div>
+                
+            <%end  end%>
         </div>
             
         <%= if @item.props["http://purl.org/rss/1.0/description"] != nil
