Corrected a small side effect bug

--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -54,7 +54,7 @@ jwplayer("<%= image%>
 				next
 				end
 				%>
-				<div class="btn-group">
+				<div class="btn-group btn-group-label">
 					<%= linkval  %>
 				</div>
 				<%end  end
