Improved the items page
Now show only the tag
Added a user bar in each item ( for sharing, favorite, and mark as read
)
Added the number of sources and filters selected in the sources panel

--- a/ZONE-watcher/app/assets/stylesheets/items.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/items.css.scss
@@ -19,3 +19,14 @@ a.label:visited{
 .btn-group-label{
   margin-right: 5px;
 }
+
+.separationLine
+{
+    position : relative;
+    width:5px;
+    border-left:1px solid #fff;
+    border-right:1px solid #eee;
+    margin-left : 10px;
+    margin-right : 10px;
+    height:30px;
+}
